charts/ingres/argocd.yaml
# Ingress for Grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-cd-ingress
  namespace: argocd
#  annotations:
#    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: argocd.mkve.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  argo-cd-1680280430-argocd-server
                port:
                  number: 80
#  tls:
#    - secretName: argocd-tls
#      hosts:
#        - argocd.mkve.ru
