charts/ingres/harbor-ingress.yaml
# Ingress for Harbor
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: harbor
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  rules:
    - host: harbor.mkve.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  harbor
                port:
                  number: 80
  tls:
    - secretName: harbor-tls
      hosts:
        - harbor.mkve.ru
