charts/ingres/kubernetes-dashboard.yaml
# Ingress for Harbor
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-dashboard-ingress
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host:  dashboard.mkve.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  kubernetes-dashboard
                port:
                  number: 443
  tls:
    - secretName: kubernetes-dashboard-tls
      hosts:
        - dashboard.mkve.ru
