charts/ingres/minio.yaml
# Ingress for Minio
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio-operator
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: minio.mkve.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  console
                port:
                  number: 9090
  tls:
    - secretName: minio-tls
      hosts:
        - minio.mkve.ru
